--- a/0329 JSX문법.html
+++ b/0329 JSX문법.html
@@ -8,6 +8,7 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link rel="stylesheet" href="./css/JSX.css" />
     <title>Document</title>
 </head>
 <body>
@@ -18,13 +19,69 @@
         function MyApp() {
             // 자바스크립트의 요소 사용가능(변수/연산자 등);
             const name = 'React';
+            const obj = {id : 3};
+            const user = '홍길동';
+            const login = user === '홍길동' ? true : false;
+            // 변수에 html 태그를 담아서 사용가능
+            const tag = <h3>반갑습니다</h3>;
+            const content = undefined;
+            // 스타일 작성
+            const style = {
+                color : "#63bfac"
+            };
             // return을 통해 화면에 출력되는 html 작성
             return (
                 // 반드시 부모요소는 하나만 있어야 한다
-                <div>
-                    <h1>JSX로 접근하는 리액트 {name}</h1>
-                    <p>먼저 하나의 태그로 감싸서 전체 내용을 출력합니다</p>
-                    <p>원하는 대로 html 내용을 작성할 수 있습니다</p>
+                // 리액트에서 style을 넣어줄 때는 {} 안에 객체형식으로 작성
+                <div style={style}>
+                    <h1 style={{color:'red'}} className="react-style font-size">JSX로 접근하는 {name}</h1>
+                    <p className={"react-style"} >먼저 하나의 태그로 감싸서 전체 내용을 출력합니다</p>
+                    <p>1+2={1+5}원하는 대로 html 내용을 작성할 수 있습니다</p>
+                    <p>배열 : {[1, 2, 3]} 안에 값이 순서대로 나열 </p>
+                    <p>
+                        객체 : {obj.id}
+                        객체는 그 안에 있는 속성이 문자, 숫자형이면 출력
+                        객체 자기자신은 출력되지 않는다 (오류)
+                    </p>
+                    <p> 들어갈 수 있는 자바스크립트 코드 : {1+3}</p>
+                    <p> 들어갈 수 있는 자바스크립트 코드 : {name.slice(0,2)}</p>
+                    <p> {"{}"} 안에 들어갈 수 있는 코드는 한줄로 실행되는 코드이다</p>
+                    <p> {"(;)"}세미콜론으로 마무리되는 코드이며 결과값이 {"{}"} 안에 출력된다</p>
+
+                    <h1>if문 대신에 삼항연산자 사용</h1>
+                    <div>
+                        {
+                            name === "React" ? (
+                            <h1>리액트입니다</h1>
+                            ) : (
+                                <h2>리액트가 아닙니다</h2>
+                            )
+                        }    
+                    </div>
+                    <div>
+                        {user === '홍길동' ? (
+                            <div>
+                                <p>{user}입니다</p>
+                                <p>여러개의 태그를 사용할 때 부모로 감싸서 사용</p>
+                            </div>    
+                            ) : (<p>홍길동이 아닙니다</p>) }
+                    </div>
+                    {
+                        login && (
+                            // 삼항연산자로 작성한 html에 변수나 함수를 쓰고 싶다면
+                            // 다시 {}를 통해 작성해 주어야 한다
+                            <div>
+                                <h1>로그인에 성공하였습니다</h1>
+                                {tag}
+                                <p>{user}입니다</p>
+                            </div>
+                        )
+                    }    
+
+                    <h1>&&연산자를 이용한 조건부 렌더링</h1>
+                    {name === 'Vue' && <h1>리액트입니다</h1>}
+                    <h1>undefined</h1>
+                    {content || <h3>값이 undefined 입니다</h3>}
                 </div>
             )
         }
